--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,3 +1,7 @@
 {% if page.mathjax %}
   {% include mathjax.html %}
 {% endif %}
+
+{% if site.tags != "" %}
+  {% include collecttags.html %}
+{% endif %}
