--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -110,16 +110,19 @@ tail_includes:
             {{- tag -}}
           </a>
         {% endfor %}
+
       </div>
     {% endif %}
 
-    <div
+    {% include post-sharing.html lang=lang %}
+
+    <!-- <div
       class="
         post-tail-bottom
         d-flex justify-content-between align-items-center mt-5 pb-2
       "
     >
-      <!-- <div class="license-wrapper">
+      <div class="license-wrapper">
         {% if site.data.locales[lang].copyright.license.template %}
           {% capture _replacement %}
         <a href="{{ site.data.locales[lang].copyright.license.link }}">
@@ -129,10 +132,10 @@ tail_includes:
 
           {{ site.data.locales[lang].copyright.license.template | replace: ':LICENSE_NAME', _replacement }}
         {% endif %}
-      </div> -->
+      </div>
 
       {% include post-sharing.html lang=lang %}
-    </div>
+    </div> -->
     <!-- .post-tail-bottom -->
   </div>
   <!-- div.post-tail-wrapper -->
