--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -113,9 +113,7 @@ tail_includes:
       </div>
     {% endif %}
 
-    {% include post-sharing.html lang=lang %}
-
-    <!-- <div
+    <div
       class="
         post-tail-bottom
         d-flex justify-content-between align-items-center mt-5 pb-2
@@ -134,7 +132,7 @@ tail_includes:
       </div>
 
       {% include post-sharing.html lang=lang %}
-    </div> -->
+    </div>
     <!-- .post-tail-bottom -->
   </div>
   <!-- div.post-tail-wrapper -->
